# bangu

./: .gitignore  .npmrc  README.md  biome.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.mts
backend/: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  tts_test.py
backend/api/: auth.py  tts.py  user.py  voice.py
backend/auth/: auth.py  deps.py
backend/core/: config.py  db.py  security.py
backend/migrations/models/: 0_20250613100208_init.py  1_20250613100434_update.py
backend/models/: user.py  voice.py
backend/schemas/: common.py  token.py  user.py  voice.py
backend/services/: tts_service.py
buildAssets/builder/: config.js
buildAssets/icons/: icon.icns
docs/src/.vitepress/: config.mts
src/main/: IPCs.ts  MainRunner.ts  index.dev.ts  index.ts
src/main/container/: container.ts  index.ts
src/main/db/: database.ts
src/main/services/: menuService.ts
src/main/utils/: Constants.ts
src/preload/: index.ts
src/renderer/: index.css  index.html  main.tsx  routeTree.gen.ts  theme.tsx  vite-env.d.ts
src/renderer/components/: VoiceClone.tsx  VoiceLibrary.tsx  VoiceUpload.tsx
src/renderer/contexts/: OrganizationContext.tsx  ProjectContext.tsx  useThemeContext.ts
src/renderer/hooks/: useBroadcastChannel.tsx  useElementResizeHeight.tsx  useOrganization.tsx  useProjectInfo.tsx  useSpeakers.tsx  useVoice.tsx
src/renderer/i18n/: config.ts
src/renderer/lib/: auth.ts  createTable.sql  request.ts  seed.sql
src/renderer/routes/: __root.tsx  _layout.tsx  forget-password.tsx  index.tsx  sign-in.tsx  sign-up.tsx  welcome.tsx
tests/: fixtures.mts  testUtil.mts
tests/specs/: app.spec.ts
(+60 files in other folders)
